--- a/requirements.txt
+++ b/requirements.txt
@@ -1,132 +1,35 @@
-altair==5.5.0
-anaconda-anon-usage @ file:///croot/anaconda-anon-usage_1753980460404/work
-anaconda-auth @ file:///croot/anaconda-cloud-auth-split_1747863777058/work
-anaconda-cli-base @ file:///croot/anaconda-cli-base_1741369443553/work
-annotated-types @ file:///work/perseverance-python-buildout/croot/annotated-types_1728386958747/work
-archspec @ file:///croot/archspec_1709217642129/work
-attrs==25.3.0
+attrs==25.4.0
 beautifulsoup4==4.14.2
-blinker==1.9.0
-boltons @ file:///croot/boltons_1751383775419/work
-Brotli==1.1.0
-brotlicffi @ file:///croot/brotlicffi_1736182461069/work
-bs4==0.0.2
-cachetools==6.2.0
 certifi==2025.10.5
-cffi @ file:///croot/cffi_1736182485317/work
-charset-normalizer==3.4.3
-click==8.3.0
-cloudscraper==1.2.71
-colorama @ file:///work/perseverance-python-buildout/croot/colorama_1728388434940/work
-conda @ file:///croot/conda_1754469510968/work/conda-src
-conda-anaconda-telemetry @ file:///croot/conda-anaconda-telemetry_1755883788794/work
-conda-anaconda-tos @ file:///croot/conda-anaconda-tos_1755123313635/work
-conda-content-trust @ file:///work/perseverance-python-buildout/croot/conda-content-trust_1728487058234/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1745607008911/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1731369017509/work
-conda_package_streaming @ file:///croot/conda-package-streaming_1751307506088/work
+charset-normalizer==3.4.4
 contourpy==1.3.3
-cryptography @ file:///croot/cryptography_1753084572505/work
-cssselect2==0.8.0
 cycler==0.12.1
-distro @ file:///work/perseverance-python-buildout/croot/distro_1728396110052/work
-Flask==3.1.2
-flask-cors==6.0.1
 fonttools==4.60.1
-frozendict @ file:///work/perseverance-python-buildout/croot/frozendict_1728497542215/work
-gitdb==4.0.12
-GitPython==3.1.45
-gunicorn==21.2.0
 h11==0.16.0
-idna==3.10
-itsdangerous==2.2.0
-jaraco.classes @ file:///croot/jaraco.classes_1755516327832/work
-jaraco.context @ file:///io/perseverance-python-buildout/croot/jaraco.context_1731706750665/work
-jaraco.functools @ file:///croot/jaraco.functools_1740408111753/work
-jeepney @ file:///tmp/build/80754af9/jeepney_1627537048313/work
-Jinja2==3.1.6
-jsonpatch @ file:///work/perseverance-python-buildout/croot/jsonpatch_1728399595941/work
-jsonpointer @ file:///croot/jsonpointer_1753788433671/work
-jsonschema==4.25.1
-jsonschema-specifications==2025.9.1
-keyring @ file:///croot/keyring_1745484691218/work
+idna==3.11
 kiwisolver==1.4.9
-libmambapy @ file:///croot/mamba-split_1734469461757/work/libmambapy
-markdown-it-py @ file:///work/perseverance-python-buildout/croot/markdown-it-py_1728387994477/work
-MarkupSafe==3.0.3
+lxml==6.0.2
 matplotlib==3.10.7
-mdurl @ file:///work/perseverance-python-buildout/croot/mdurl_1728387286143/work
-menuinst @ file:///croot/menuinst_1753464582829/work
-more-itertools @ file:///work/perseverance-python-buildout/croot/more-itertools_1728388668839/work
-narwhals==2.6.0
-numpy==2.3.3
+numpy==2.3.4
 outcome==1.3.0.post0
-packaging @ file:///croot/packaging_1753775359799/work
+packaging==25.0
 pandas==2.3.3
-pillow==11.3.0
-pkce @ file:///work/perseverance-python-buildout/croot/pkce_1728388093137/work
-platformdirs @ file:///croot/platformdirs_1744273042065/work
-plotly==6.3.1
-pluggy @ file:///croot/pluggy_1733169602837/work
-protobuf==6.32.1
-pyarrow==21.0.0
-pycosat @ file:///croot/pycosat_1736868416091/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic @ file:///croot/pydantic_1750768261732/work
-pydantic-settings @ file:///io/buildout/croot/pydantic-settings_1735843225507/work
-pydantic_core @ file:///croot/pydantic-core_1750754736071/work
-pydeck==0.9.1
-pydyf==0.11.0
-Pygments @ file:///croot/pygments_1744664109463/work
-PyJWT @ file:///io/buildout/croot/pyjwt_1739558969999/work
+pillow==12.0.0
 pyparsing==3.2.5
-pyphen==0.17.2
-PySocks @ file:///work/perseverance-python-buildout/croot/pysocks_1728386193338/work
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
-python-dotenv @ file:///croot/python-dotenv_1745610241282/work
 pytz==2025.2
-readchar @ file:///work/perseverance-python-buildout/croot/readchar_1728397613245/work
-referencing==0.36.2
 requests==2.32.5
-requests-toolbelt==1.0.0
-rich @ file:///croot/rich_1732638981168/work
-rpds-py==0.27.1
-ruamel.yaml @ file:///croot/ruamel.yaml_1745960305322/work
-ruamel.yaml.clib @ file:///croot/ruamel.yaml.clib_1745937152469/work
-scipy==1.16.2
-SecretStorage @ file:///work/perseverance-python-buildout/croot/secretstorage_1728387678881/work
+seaborn==0.13.2
 selenium==4.37.0
-semver @ file:///croot/semver_1736540782504/work
-setuptools==78.1.1
-shellingham @ file:///work/perseverance-python-buildout/croot/shellingham_1728395303315/work
 six==1.17.0
-smmap==5.0.2
 sniffio==1.3.1
 sortedcontainers==2.4.0
 soupsieve==2.8
-spicy==0.16.0
-streamlit==1.50.0
-tenacity==9.1.2
-tinycss2==1.4.0
-tinyhtml5==2.0.0
-toml==0.10.2
-tomli @ file:///croot/tomli_1753774587605/work
-tornado==6.5.2
-tqdm @ file:///croot/tqdm_1738943501192/work
 trio==0.31.0
 trio-websocket==0.12.2
-truststore @ file:///croot/truststore_1753907171582/work
-typer @ file:///work/perseverance-python-buildout/croot/typer_1728397851651/work
-typing-inspection @ file:///croot/typing-inspection_1746023470701/work
 typing_extensions==4.15.0
 tzdata==2025.2
-urllib3 @ file:///croot/urllib3_1750775463400/work
-watchdog==6.0.0
-weasyprint==66.0
-webencodings==0.5.1
+urllib3==2.5.0
 websocket-client==1.9.0
-Werkzeug==3.1.3
-wheel==0.45.1
 wsproto==1.2.0
-zopfli==0.2.3.post1
-zstandard @ file:///croot/zstandard_1731356346222/work
